vercre-wallet/tests/snapshots/presentation__auth-request.snap
---
source: vercre-wallet/tests/presentation.rs
assertion_line: 57
expression: app.view(&model)
---
credentials: "[]"
status: Inactive
