vercre-wallet/tests/snapshots/presentation__set-request.snap
---
source: vercre-wallet/tests/presentation.rs
assertion_line: 79
expression: app.view(&model)
---
credentials: "[]"
status: Requested
