vercre-wallet/tests/snapshots/presentation__verifier-response.snap
---
source: vercre-wallet/tests/presentation.rs
assertion_line: 124
expression: app.view(&model)
---
credentials: []
status: Inactive

